UI is modified.
recyclerview_coinlist_item.xml 에 상단 테두리 추가함.
fragment_transaction.xml의 TextView textSize 조절함.
splash screen 추가함.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -25,4 +25,8 @@
     <style name="SpinnerwithNoArrow" parent="@android:style/Widget.Spinner">
         <item name="android:background">@color/main_background</item>
     </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 </resources>
