--- a/app/src/main/res/layout/recyclerview_coinlist_item.xml
+++ b/app/src/main/res/layout/recyclerview_coinlist_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/main_background"
+    android:background="@drawable/coin_list_recyclerview_item_background"
     android:padding="10dp">
 
     <LinearLayout
