--- a/app/src/main/res/layout/fragment_coin_info.xml
+++ b/app/src/main/res/layout/fragment_coin_info.xml
@@ -18,10 +18,11 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/coinInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:lineSpacingExtra="5sp"
                 android:padding="10dp"
                 android:text="코인 정보가 들어갈 TextView 입니다."
                 android:textColor="#FFFFFF"
