--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -10,13 +10,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="2"
             android:gravity="left|center_vertical"
             android:padding="10dp"
@@ -25,10 +27,14 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/canOrderPrice"
+            android:id="@+id/canOrderCoin"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="3"
+            android:autoSizeMaxTextSize="16sp"
+            android:autoSizeMinTextSize="8sp"
+            android:autoSizeStepGranularity="2sp"
+            android:autoSizeTextType="uniform"
             android:gravity="right|center_vertical"
             android:padding="10dp"
             android:text="0 DOGE"
@@ -41,6 +47,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -61,12 +69,16 @@
                 android:textColor="#FFFFFF"
                 android:textSize="14sp" />
 
-            <TextView
+            <EditText
                 android:id="@+id/orderCount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:background="@null"
+                android:cursorVisible="true"
                 android:gravity="right|center_vertical"
+                android:inputType="numberDecimal"
+                android:padding="0dp"
                 android:text="0"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp" />
