--- a/app/src/main/res/drawable/asset_linearlayout_border_2.xml
+++ b/app/src/main/res/drawable/asset_linearlayout_border_2.xml
@@ -6,16 +6,18 @@
             <stroke
                 android:width="1dp"
                 android:color="#1e2a3a" />
-            <solid android:color="@color/asset_background" />
+            <solid android:color="@color/main_background" />
         </shape>
     </item>
 
-    <item android:right="1dp">
+    <item
+        android:bottom="1dp"
+        android:top="1dp">
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/asset_background" />
-            <solid android:color="@color/asset_background" />
+                android:color="@color/main_background" />
+            <solid android:color="@color/main_background" />
         </shape>
     </item>
 
