--- a/app/src/main/res/drawable/asset_linearlayout_border_3.xml
+++ b/app/src/main/res/drawable/asset_linearlayout_border_3.xml
@@ -5,17 +5,17 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="#1e2a3a" />
-            <solid android:color="@color/asset_background" />
+                android:color="#152131" />
+            <solid android:color="@color/main_background" />
         </shape>
     </item>
 
-    <item android:right="1dp">
+    <item android:top="1dp">
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/asset_background" />
-            <solid android:color="@color/asset_background" />
+                android:color="@color/main_background" />
+            <solid android:color="@color/main_background" />
         </shape>
     </item>
 
