--- a/app/src/main/res/layout/recyclerview_transaction_item.xml
+++ b/app/src/main/res/layout/recyclerview_transaction_item.xml
@@ -55,6 +55,6 @@
             android:gravity="left|center_vertical"
             android:paddingLeft="10dp"
             android:text="799,336.887"
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/upbit_light_gray" />
     </LinearLayout>
 </LinearLayout>
