--- a/app/src/main/res/drawable/coin_list_searchview_border.xml
+++ b/app/src/main/res/drawable/coin_list_searchview_border.xml
@@ -9,7 +9,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="#FFFFFF" />
+                android:color="@color/upbit_light_gray" />
 
             <solid android:color="@color/main_background" />
         </shape>
