--- a/app/src/main/res/layout/activity_popup_buy_sell.xml
+++ b/app/src/main/res/layout/activity_popup_buy_sell.xml
@@ -33,7 +33,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:text="도지코인(DOGE/KRW)"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/upbit_light_gray"
         android:textSize="14sp" />
 
     <LinearLayout
@@ -49,7 +49,7 @@
             android:gravity="left|center_vertical"
             android:paddingLeft="20dp"
             android:text="@string/popup_buy_sell_divide"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp" />
 
         <TextView
@@ -60,7 +60,7 @@
             android:gravity="right|center_vertical"
             android:paddingRight="20dp"
             android:text="@string/popup_buy_sell_market_price"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp" />
     </LinearLayout>
 
@@ -77,7 +77,7 @@
             android:gravity="left|center_vertical"
             android:paddingLeft="20dp"
             android:text="@string/popup_buy_sell_price"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp" />
 
         <TextView
@@ -88,7 +88,7 @@
             android:gravity="right|center_vertical"
             android:paddingRight="20dp"
             android:text="412 KRW"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -106,7 +106,7 @@
             android:gravity="left|center_vertical"
             android:paddingLeft="20dp"
             android:text="@string/popup_buy_sell_count"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp" />
 
         <TextView
@@ -117,7 +117,7 @@
             android:gravity="right|center_vertical"
             android:paddingRight="20dp"
             android:text="15.000000 DOGE"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -135,7 +135,7 @@
             android:gravity="left|center_vertical"
             android:paddingLeft="20dp"
             android:text="@string/popup_buy_sell_total_price"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp" />
 
         <TextView
@@ -146,7 +146,7 @@
             android:gravity="right|center_vertical"
             android:paddingRight="20dp"
             android:text="46,184,255 KRW"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/upbit_light_gray"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
