--- a/app/src/main/res/layout/fragment_coin_list.xml
+++ b/app/src/main/res/layout/fragment_coin_list.xml
@@ -17,7 +17,7 @@
         android:layout_marginRight="10dp"
         android:padding="10dp"
         android:text="@string/coin_list_title"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/upbit_light_gray"
         android:textSize="20sp"
         android:textStyle="bold" />
 
