--- a/app/src/main/res/menu/menu_bottomnavigationview.xml
+++ b/app/src/main/res/menu/menu_bottomnavigationview.xml
@@ -19,4 +19,9 @@
         android:id="@+id/menu_investment"
         android:icon="@drawable/menu_investment_selector"
         android:title="@string/menu_investment" />
+
+    <item
+        android:id="@+id/menu_setting"
+        android:icon="@drawable/menu_setting_selector"
+        android:title="@string/menu_setting" />
 </menu>
