UI is modified.
TextView에 표시되는 텍스트의 길이에 따라 텍스트 사이즈가 자동으로 설정되도록 수정함.
차트 화면과 매수/매도 화면에서 전일 대비 등락률이 이상하게 나타나는 오류를 수정함.

--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -100,12 +100,16 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="4"
+            android:autoSizeMaxTextSize="15sp"
+            android:autoSizeMinTextSize="6sp"
+            android:autoSizeStepGranularity="1sp"
+            android:autoSizeTextType="uniform"
             android:gravity="center"
+            android:maxLines="1"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:text="▼2,333,000"
-            android:textColor="@color/coin_list_blue"
-            android:textSize="15sp" />
+            android:textColor="@color/coin_list_blue" />
     </LinearLayout>
 
     <LinearLayout
