--- a/app/src/main/res/layout/recyclerview_coinlist_item.xml
+++ b/app/src/main/res/layout/recyclerview_coinlist_item.xml
@@ -16,7 +16,7 @@
         <TextView
             android:id="@+id/korCoinName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:gravity="left|center_vertical"
             android:text="도지코인"
             android:textColor="@color/upbit_light_gray"
@@ -25,7 +25,7 @@
         <TextView
             android:id="@+id/engCoinName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:gravity="left|center_vertical"
             android:text="DOGE/KRW"
             android:textColor="@color/coin_list_gray"
@@ -35,9 +35,9 @@
     <TextView
         android:id="@+id/realTimePrice"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_weight="1"
-        android:gravity="right|center_vertical"
+        android:gravity="right"
         android:paddingRight="10dp"
         android:text="592"
         android:textColor="@color/coin_list_blue"
@@ -46,9 +46,9 @@
     <TextView
         android:id="@+id/changeRate"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_weight="1"
-        android:gravity="right|center_vertical"
+        android:gravity="right"
         android:paddingRight="20dp"
         android:text="-7.21%"
         android:textColor="@color/coin_list_blue"
@@ -57,10 +57,14 @@
     <TextView
         android:id="@+id/totalTradePrice"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_weight="1"
-        android:gravity="right|center_vertical"
+        android:autoSizeMaxTextSize="14sp"
+        android:autoSizeMinTextSize="6sp"
+        android:autoSizeStepGranularity="1sp"
+        android:autoSizeTextType="uniform"
+        android:gravity="right"
+        android:maxLines="1"
         android:text="12,217,996백만"
-        android:textColor="@color/upbit_light_gray"
-        android:textSize="11sp" />
+        android:textColor="@color/upbit_light_gray" />
 </LinearLayout>
