FragemtBuy and Sell is modified.
매수/매도 화면에 있는 Spinner의 초기 값을 수정함.

--- a/app/src/main/res/values/spinnerdata.xml
+++ b/app/src/main/res/values/spinnerdata.xml
@@ -3,6 +3,7 @@
 
     <string name="orderCountSpinner_prompt">가능</string>
     <string-array name="orderCountSpinner">
+        <item>가능</item>
         <item>최대</item>
         <item>50%</item>
         <item>25%</item>
